--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,17 @@ header {
     position: fixed;
     width: 100%;
 }
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+header li {
+    list-style-type: none;
+}
+h1 {
+    color: #3a3a3a;
+    text-align: center;
+}
 main {
     background-color: #ff6f91;
     flex: 1 0 auto;
