--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,16 +26,23 @@ header a {
     text-decoration: none;
     color: inherit;
 }
-header li {
-    list-style-type: none;
-    letter-spacing: 4px;
-}
 h1 {
     color: #303030;
     text-align: center;
+    margin-bottom: 8px;
+    padding-bottom: 8px;
 }
 .Home {
      border-bottom: 1px solid ;
+}
+nav {
+    background-color: #fff4f9;
+    text-align: right;
+    padding-right: 10px;
+    margin-right: 10px;
+    padding-bottom: 2px;
+    margin-bottom: 2px;
+    
 }
 main {
     background-color: #ff6f91;
