--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,13 @@ main {
 footer {
     background-color: #ff9671;
 }
+
+
+/*Media queries*/
+@media screen and (min-width :768px) {
+    nav {
+        letter-spacing: 5px;
+        font-size: 20px;
+    }
+    
+}
