--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,14 @@ footer {
 @media screen and (min-width :768px) {
     nav {
         letter-spacing: 5px;
-        font-size: 20px;
+        font-size: 20px; 
+    }
+    
+}
+
+@media screen and (min-width: 992px){
+    .Home, .Classes, .Contacts:hover {
+        border-bottom: 1px solid #303030;
     }
     
 }
