--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,9 +47,20 @@ main {
     flex: 1 0 auto;
     margin-top: 70px;
 }
-
 footer {
-    background-color: #ff9671;
+    background-color: #fff4f9;
+}
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 15px;
+    color: #303030;
 }
 
 
@@ -69,19 +80,22 @@ footer {
     .Home:hover, .Classes:hover, .Contacts:hover {
         border-bottom: 1px solid #303030;
     }
-    h1 {
-        letter-spacing: 8px;
-    }
+
     main {
-        margin-top: 66px;
+        margin-top: 68px;
     }
     nav {
         padding-bottom: 5px;
         margin-bottom: 5px;
     }
     h1 {
+        letter-spacing: 8px;
         padding-bottom: 0;
         margin-bottom: 0;
+    }
+    span {
+        letter-spacing: 40px;
+        font-size: 25px;
     }
     
 }
