--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ footer {
 }
 
 @media screen and (min-width: 992px){
-    .Home:hover, .Classes:hover, .Contacts:hover {
+    .Home:hover, .Classes:hover, .Register:hover {
         border-bottom: 1px solid #303030;
     }
 
