--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ main {
 #main-image {
     height: 600px;
     width: 100%;
-    background: url("../images/pexels-mikhail-nilov-6740748.jpg") no-repeat center center/cover;
+    background: url("") no-repeat center center/cover;
 }
 footer {
     background-color: #fff4f9;
