--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,13 @@ margin: 4px;
 padding-bottom: 5px;
 margin-bottom: 5px;
 }
+
+ p .Classes {
+    text-decoration: none;
+    border-bottom: 1px solid #303030;
+    color: #303030;
+}
+
 footer {
     background-color: #fff4f9;
 }
