--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ footer {
     font-size: 15px;
     color: #303030;
 }
-/*Classes styles*/
+/*Classes page styles*/
 
 #Available-classes {
  text-align: center;
@@ -111,6 +111,37 @@ h2 ~ div {
     padding-top: 6px;
 }
 
+/* Register page styles*/
+
+#register {
+    padding: 20px 10% 0 10%;
+
+}
+#register-form {
+    padding: 30px;
+}
+#register-form > h2 {
+ margin-bottom: 10px;
+ padding-bottom: 10px;
+
+}
+.text-input {
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+.confirm {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 15px;
+    background-color: #ff6f91;
+    color: #303030;
+}
+
 /*Media queries*/
 @media screen and (min-width :768px) {
     nav {
@@ -132,6 +163,19 @@ h2 ~ div {
     h1 {
         text-align: left;
     }
+    #register {
+        position: relative;
+    }
+    #register-form {
+        max-width: 400px;
+        position: absolute;
+        left: 100px;
+        top: 150px;
+    }
+    .text-input:hover {
+        border-color: #ff6f91;
+    }
+
 }
 
 @media screen and (min-width: 992px){
