--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,11 @@ main {
     flex: 1 0 auto;
     margin-top: 70px;
 }
+/*Main image*/
 #main-image {
-    height: 300px;
+    height: 600px;
     width: 100%;
-    background-color: #ff6f91;
+    background: url("./images/pexels-alexy-almond-3756499.jpg") no-repeat center center/cover;
 }
 #h2 {
     text-align: center;
@@ -195,5 +196,7 @@ h2 ~ div {
         margin-bottom: 0;
         text-align: left;
     }
-    
+    #social-networks i {
+        font-size: 22px;
+    }
 }
