--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,12 @@ h2 ~ div
     margin-top: 6px;
     padding-top: 6px;
 }
-
+h3 
+{
+    text-align: center;
+    padding-top: 4px;
+    margin-top: 4px;
+}
 
 /* Register page styles*/
 
