--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,8 @@ main
 {
     text-align: center;
     color: #ff6f91;
+    padding-top: 2px;
+    margin-top: 2px;
 }
 #h3
 {   text-align: center;
@@ -78,6 +80,7 @@ p
 footer 
 {  background-color: #fff4f9;
 }
+
 #social-networks 
 {   text-align: center;
     padding: 20px 0;
@@ -177,11 +180,11 @@ h3
 
     #classes div {
         text-align: center;
-        font-size: 30px;
+        font-size: 20px;
         height: 851px;
     }
     #Available-classes {
-        font-size: 30px;
+        font-size: 20px;
     }
     
     /*Register page media queries*/
@@ -198,7 +201,8 @@ h3
         border-color: #ff6f91;
     }
 
-}/* Media queries for screen sizes 992px and up*/
+}
+/* Media queries for screen sizes 992px and up*/
 @media screen and (min-width: 992px){
 
     main {
