--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Lato:wght@300&display=swap') ;
+
+@import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Inconsolata:wght@200..900&family=Lato:wght@300&display=swap');
+
 * {
 padding : 0;
 margin : 0;
@@ -8,7 +10,7 @@ min-height : 100vh;
 display : flex;
 flex-direction : column;
 color : #3a3a3a;
-font-family : 'Inconsolata', sans-serif;
+font-family : 'Calligraffitti', sans-serif;
 }
 header {
 background-color : #fff4f9;
@@ -42,7 +44,7 @@ margin-top : 70px;
 #main-image {
 height : 300px;
 width : 100%;
-background : url("./images/pexels-alexy-almond-3758057\ \(1\).jpg") center center /cover no-repeat;
+background : url("../images/lady\ striking\ yoga\ poses.jpg") center center /cover no-repeat;
 }
 #h2 {
 text-align : center;
