--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,17 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Inconsolata:wght@200..900&family=Lato:wght@300&display=swap');
-
+/*Import for google fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Lato:wght@300&family=Zeyada&display=swap');
+/*Overwrites the default styling added by the browser*/
 * {
 padding : 0;
 margin : 0;
 }
+/*home page styling*/
 body {
 min-height : 100vh;
 display : flex;
 flex-direction : column;
 color : #3a3a3a;
-font-family : 'Calligraffitti', sans-serif;
+font-family : 'Zeyada', sans-serif;
 }
 header {
 background-color : #fff4f9;
@@ -64,6 +65,7 @@ text-decoration : none;
 border-bottom : 1px solid #303030;
 color : #303030;
 }
+/*footer styles*/
 footer {
 background-color : #fff4f9;
 }
@@ -78,6 +80,7 @@ list-style-type : none;
 font-size : 15px;
 color : #303030;
 }
+/* Classes page styling*/
 #background-video {
 width : 100vw;
 height : 100vh;
@@ -98,12 +101,17 @@ height : 526px;
 text-align : center;
 padding-top : 10px;
 }
+h3 {
+    text-align: center;
+}
 h2 ~ div {
 margin-top : 6px;
 padding-top : 6px;
 }
+/*Register page styling*/
 #Register {
-padding : 20px 10% 0 10%;
+    background-image: url(../images/woman-holding-a-yoga-mat.jpg) no-repeat center center/cover;
+    padding : 20px 10% 0 10%;
 }
 #register-form {
 padding : 30px;
