--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ main {background-color: #ede5eb00;
     margin-top: 70px;
 }
 #h2,#h3 
-{
+{   text-align: center;
     color: #78192f;
 }
 /*Main image*/
@@ -54,7 +54,6 @@ main {background-color: #ede5eb00;
     background: url("../images/lady\ striking\ yoga\ poses.jpg") no-repeat center center/cover;
 }
 #h2 {
-    text-align: center;
     padding-bottom: 4px;
     padding-top: 4px;
     font-size: 20px;
@@ -105,6 +104,9 @@ footer {
     color: #fff4f9;
     background-color:  rgba(4, 0, 1, 0.6); 
     height: 526px;
+    text-align: center;
+    padding-top: 5px;
+    margin-top: 5px;
 }
 
 #Available-classes {
