--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header a {
     color: inherit;
 }
 h1 {
-    color: #303030;
+    color: #78192f;
     text-align: center;
     margin-bottom: 8px;
     padding-bottom: 8px;
@@ -71,6 +71,9 @@ margin-bottom: 5px;
     border-bottom: 1px solid #303030;
     color: #303030;
 }
+h3 {
+    text-align: center;
+}
 /*Footer styles*/
 footer {
     background-color: #fff4f9;
@@ -85,7 +88,7 @@ footer {
 
 #social-networks i {
     font-size: 15px;
-    color: #303030;
+    color: #78192f;
 }
 /*Classes page styles*/
 #background-video {
