--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ h1 {
     padding-bottom: 8px;
 }
 nav {
+    color: #78192f;
     background-color: #fff4f9;
     text-align: right;
     padding-right: 10px;
@@ -71,9 +72,7 @@ margin-bottom: 5px;
     border-bottom: 1px solid #303030;
     color: #303030;
 }
-h3 {
-    text-align: center;
-}
+
 /*Footer styles*/
 footer {
     background-color: #fff4f9;
