--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,28 @@ h2 ~ div {
     background-color: #ff6f91;
     color: #303030;
 }
+/*Thank you page styles*/
+    #thankyou-image {
+        height: 90vh;
+        width: 90vw;
+        background: url(../images/person-making-thumbs-up-sign-on-a-pink-background.jpg) no-repeat top center/cover;
+        /*Makes the square into circle*/
+        border-radius: 50%;
+        
+        
+        max-width: 300px;
+        max-height: 300px;
+    }    
+    #thank-you-image {
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    h2 {
+        text-align: center;
+    }
+
 /*404 page styles*/
    #error {
      text-align: center;
