Add a more optimzed  main image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ main {background-color: #ede5eb00;
 #main-image {
     height: 300px;
     width: 100%;
-    background: url("../images/lady\ striking\ yoga\ poses.jpg") no-repeat center center/cover;
+    background: url("../images/lady-striking-a-yoga-pose.jpg") no-repeat center center/cover;
 }
 #h2 {
     padding-bottom: 4px;
