Give names to the thank you and 404 links and give the names a display of hidden so they do not show up on the websites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,12 @@ h3 {
      text-align: center;
      font-size: 25px;
    }
+   .hidden {
+    display: none;
+   }
+   #hidden {
+    display: none;
+   }
 
    /*Media queries for devices with reduced motion enabled*/
 @media (prefers-reduced-motion: reduce) {
